maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: 'case' expected but integer literal found.
      0 case => if(!estFaceMur){avance()}
      ^RandomMouseMaze:8: error: '}' expected but ';' found.
      1 case => droite()
^RandomMouseMaze:8: error: '}' expected but 'case' found.
      1 case => droite()
        ^RandomMouseMaze:9: error: '}' expected but 'case' found.
      2 case => gauche()
        ^RandomMouseMaze:12: error: eof expected but '}' found.
}
^