maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  while(!estSurBiscuit){
    var a = random3()
    a match {
      0 case => if(!estFaceMur){avance()}
      1 case => droite()
      2 case => gauche()
    }
  }
}
